[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/tileset/png/tileset.png" type="Texture" id=1]
[ext_resource path="res://scene/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/Room.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 384 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 80 )

[node name="Room" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 2, 2, 0, 4, 3, 0, 6, 4, 0, 4, 5, 0, 6, 6, 0, 4, 7, 0, 6, 8, 0, 4, 9, 0, 6, 10, -1610612736, 262144, 11, -1610612736, 262144, 12, -1610612736, 262144, 13, -1610612736, 262144, 14, 0, 6, 15, 0, 18, 16, 0, 6, 17, 0, 18, 18, 0, 6, 19, 0, 18, 20, 0, 6, 21, 0, 18, 22, 0, 22, 23, 536870912, 0, 65536, -2147483648, 2, 65537, 0, 131074, 65538, 0, 131076, 65539, 0, 131078, 65540, 0, 131076, 65541, 0, 131078, 65542, 0, 131076, 65543, 0, 131078, 65544, 0, 131076, 65545, 0, 131078, 65546, -1610612736, 262144, 65547, -1610612736, 262144, 65548, -1610612736, 262144, 65549, -1610612736, 262144, 65550, 536870912, 131076, 65551, 536870912, 131078, 65552, 536870912, 131076, 65553, 536870912, 131078, 65554, 536870912, 131076, 65555, 536870912, 131078, 65556, 536870912, 131076, 65557, 536870912, 131078, 65558, -1610612736, 131074, 65559, -1610612736, 2, 131072, -2147483648, 18, 131073, -2147483648, 131078, 131074, -1610612736, 262144, 131075, -1610612736, 262144, 131076, -1610612736, 262144, 131077, -1610612736, 262144, 131078, -1610612736, 262144, 131079, -1610612736, 262144, 131080, -1610612736, 262144, 131081, -1610612736, 262144, 131082, -1610612736, 262144, 131083, -1610612736, 262144, 131084, -1610612736, 262144, 131085, -1610612736, 262144, 131086, -1610612736, 262144, 131087, -1610612736, 262144, 131088, -1610612736, 262144, 131089, -1610612736, 262144, 131090, -1610612736, 262144, 131091, -1610612736, 262144, 131092, -1610612736, 262144, 131093, -1610612736, 262144, 131094, -1610612736, 131076, 131095, -1610612736, 4, 196608, -2147483648, 4, 196609, -2147483648, 131076, 196610, -1610612736, 262144, 196611, -1610612736, 262144, 196612, -1610612736, 262144, 196613, -1610612736, 262144, 196614, -1610612736, 262144, 196615, -1610612736, 262144, 196616, -1610612736, 262144, 196617, -1610612736, 262144, 196618, -1610612736, 262144, 196619, -1610612736, 262144, 196620, -1610612736, 262144, 196621, -1610612736, 262144, 196622, -1610612736, 262144, 196623, -1610612736, 262144, 196624, -1610612736, 262144, 196625, -1610612736, 262144, 196626, -1610612736, 262144, 196627, -1610612736, 262144, 196628, -1610612736, 262144, 196629, -1610612736, 262144, 196630, -1610612736, 131078, 196631, -1610612736, 6, 262144, -2147483648, 18, 262145, -2147483648, 131078, 262146, -1610612736, 262144, 262147, -1610612736, 262144, 262148, -1610612736, 262144, 262149, -1610612736, 262144, 262150, -1610612736, 262144, 262151, -1610612736, 262144, 262152, -1610612736, 262144, 262153, -1610612736, 262144, 262154, -1610612736, 262144, 262155, -1610612736, 262144, 262156, -1610612736, 262144, 262157, -1610612736, 262144, 262158, -1610612736, 262144, 262159, -1610612736, 262144, 262160, -1610612736, 262144, 262161, -1610612736, 262144, 262162, -1610612736, 262144, 262163, -1610612736, 262144, 262164, -1610612736, 262144, 262165, -1610612736, 262144, 262166, -1610612736, 131076, 262167, -1610612736, 4, 327680, -1610612736, 262144, 327681, -1610612736, 262144, 327682, -1610612736, 262144, 327683, -1610612736, 262144, 327684, -1610612736, 262144, 327685, -1610612736, 262144, 327686, -1610612736, 262144, 327687, -1610612736, 262144, 327688, -1610612736, 262144, 327689, -1610612736, 262144, 327690, -1610612736, 262144, 327691, -1610612736, 262144, 327692, -1610612736, 262144, 327693, -1610612736, 262144, 327694, -1610612736, 262144, 327695, -1610612736, 262144, 327696, -1610612736, 262144, 327697, -1610612736, 262144, 327698, -1610612736, 262144, 327699, -1610612736, 262144, 327700, -1610612736, 262144, 327701, -1610612736, 262144, 327702, -1610612736, 262144, 327703, -1610612736, 262144, 393216, -1610612736, 262144, 393217, -1610612736, 262144, 393218, -1610612736, 262144, 393219, -1610612736, 262144, 393220, -1610612736, 262144, 393221, -1610612736, 262144, 393222, -1610612736, 262144, 393223, -1610612736, 262144, 393224, -1610612736, 262144, 393225, -1610612736, 262144, 393226, -1610612736, 262144, 393227, -1610612736, 262144, 393228, -1610612736, 262144, 393229, -1610612736, 262144, 393230, -1610612736, 262144, 393231, -1610612736, 262144, 393232, -1610612736, 262144, 393233, -1610612736, 262144, 393234, -1610612736, 262144, 393235, -1610612736, 262144, 393236, -1610612736, 262144, 393237, -1610612736, 262144, 393238, -1610612736, 262144, 393239, -1610612736, 262144, 458752, -1610612736, 262144, 458753, -1610612736, 262144, 458754, -1610612736, 262144, 458755, -1610612736, 262144, 458756, -1610612736, 262144, 458757, -1610612736, 262144, 458758, -1610612736, 262144, 458759, -1610612736, 262144, 458760, -1610612736, 262144, 458761, -1610612736, 262144, 458762, -1610612736, 262144, 458763, -1610612736, 262144, 458764, -1610612736, 262144, 458765, -1610612736, 262144, 458766, -1610612736, 262144, 458767, -1610612736, 262144, 458768, -1610612736, 262144, 458769, -1610612736, 262144, 458770, -1610612736, 262144, 458771, -1610612736, 262144, 458772, -1610612736, 262144, 458773, -1610612736, 262144, 458774, -1610612736, 262144, 458775, -1610612736, 262144, 524288, -1610612736, 262144, 524289, -1610612736, 262144, 524290, -1610612736, 262144, 524291, -1610612736, 262144, 524292, -1610612736, 262144, 524293, -1610612736, 262144, 524294, -1610612736, 262144, 524295, -1610612736, 262144, 524296, -1610612736, 262144, 524297, -1610612736, 262144, 524298, -1610612736, 262144, 524299, -1610612736, 262144, 524300, -1610612736, 262144, 524301, -1610612736, 262144, 524302, -1610612736, 262144, 524303, -1610612736, 262144, 524304, -1610612736, 262144, 524305, -1610612736, 262144, 524306, -1610612736, 262144, 524307, -1610612736, 262144, 524308, -1610612736, 262144, 524309, -1610612736, 262144, 524310, -1610612736, 262144, 524311, -1610612736, 262144, 589824, -1073741824, 6, 589825, -1073741824, 131078, 589826, -1610612736, 262144, 589827, -1610612736, 262144, 589828, -1610612736, 262144, 589829, -1610612736, 262144, 589830, -1610612736, 262144, 589831, -1610612736, 262144, 589832, -1610612736, 262144, 589833, -1610612736, 262144, 589834, -1610612736, 262144, 589835, -1610612736, 262144, 589836, -1610612736, 262144, 589837, -1610612736, 262144, 589838, -1610612736, 262144, 589839, -1610612736, 262144, 589840, -1610612736, 262144, 589841, -1610612736, 262144, 589842, -1610612736, 262144, 589843, -1610612736, 262144, 589844, -1610612736, 262144, 589845, -1610612736, 262144, 589846, -1610612736, 131076, 589847, -1610612736, 4, 655360, -1073741824, 4, 655361, -1073741824, 131076, 655362, -1610612736, 262144, 655363, -1610612736, 262144, 655364, -1610612736, 262144, 655365, -1610612736, 262144, 655366, -1610612736, 262144, 655367, -1610612736, 262144, 655368, -1610612736, 262144, 655369, -1610612736, 262144, 655370, -1610612736, 262144, 655371, -1610612736, 262144, 655372, -1610612736, 262144, 655373, -1610612736, 262144, 655374, -1610612736, 262144, 655375, -1610612736, 262144, 655376, -1610612736, 262144, 655377, -1610612736, 262144, 655378, -1610612736, 262144, 655379, -1610612736, 262144, 655380, -1610612736, 262144, 655381, -1610612736, 262144, 655382, -1610612736, 131078, 655383, -1610612736, 6, 720896, -1073741824, 6, 720897, -1073741824, 131078, 720898, -1610612736, 262144, 720899, -1610612736, 262144, 720900, -1610612736, 262144, 720901, -1610612736, 262144, 720902, -1610612736, 262144, 720903, -1610612736, 262144, 720904, -1610612736, 262144, 720905, -1610612736, 262144, 720906, -1610612736, 262144, 720907, -1610612736, 262144, 720908, -1610612736, 262144, 720909, -1610612736, 262144, 720910, -1610612736, 262144, 720911, -1610612736, 262144, 720912, -1610612736, 262144, 720913, -1610612736, 262144, 720914, -1610612736, 262144, 720915, -1610612736, 262144, 720916, -1610612736, 262144, 720917, -1610612736, 262144, 720918, -1610612736, 131076, 720919, -1610612736, 4, 786432, -1073741824, 2, 786433, -1073741824, 131074, 786434, 1073741824, 131076, 786435, 1073741824, 131078, 786436, 1073741824, 131076, 786437, 1073741824, 131078, 786438, 1073741824, 131076, 786439, 1073741824, 131078, 786440, 1073741824, 131076, 786441, 1073741824, 131078, 786442, -1610612736, 262144, 786443, -1610612736, 262144, 786444, -1610612736, 262144, 786445, -1610612736, 262144, 786446, 1073741824, 131078, 786447, 1073741824, 131076, 786448, 1073741824, 131078, 786449, 1073741824, 131076, 786450, 1073741824, 131078, 786451, 1073741824, 131076, 786452, 1073741824, 131078, 786453, 1073741824, 131076, 786454, 1610612736, 131074, 786455, -1610612736, 22, 851968, 1073741824, 0, 851969, 1073741824, 2, 851970, 1073741824, 4, 851971, 1073741824, 6, 851972, 1073741824, 4, 851973, 1073741824, 6, 851974, 1073741824, 4, 851975, 1073741824, 6, 851976, 1073741824, 4, 851977, 1073741824, 6, 851978, -1610612736, 262144, 851979, -1610612736, 262144, 851980, -1610612736, 262144, 851981, -1610612736, 262144, 851982, 1073741824, 6, 851983, 1073741824, 4, 851984, 1073741824, 6, 851985, 1073741824, 4, 851986, 1073741824, 6, 851987, 1073741824, 4, 851988, 1073741824, 6, 851989, 1073741824, 4, 851990, 1073741824, 22, 851991, 1610612736, 0 )

[node name="walls" type="StaticBody2D" parent="."]

[node name="wall_northeast" type="CollisionPolygon2D" parent="walls"]
position = Vector2( 32, 0 )
polygon = PoolVector2Array( 352, 0, 352, 80, 320, 80, 320, 28, 192, 28, 192, 0 )

[node name="wall_northwest" type="CollisionPolygon2D" parent="walls"]
polygon = PoolVector2Array( 0, 0, 0, 80, 32, 80, 32, 28, 160, 28, 160, 0 )

[node name="wall_southwest" type="CollisionPolygon2D" parent="walls"]
position = Vector2( 0, 16 )
polygon = PoolVector2Array( 0, 128, 0, 208, 160, 208, 160, 176, 32, 176, 32, 128 )

[node name="wall_southeast" type="CollisionPolygon2D" parent="walls"]
position = Vector2( 32, 16 )
polygon = PoolVector2Array( 192, 176, 192, 208, 352, 208, 352, 128, 320, 128, 320, 176 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="ground" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 192, 112 )
shape = SubResource( 2 )

[node name="DoorUp" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 16 )

[node name="DoorDown" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 208 )
rotation = 3.14159
scale = Vector2( -1, 1 )

[node name="DoorRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 368, 112 )
rotation = 1.5708

[node name="DoorLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 112 )
rotation = 4.71239

[node name="WallUp" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 160, 0 )

[node name="WallLeft" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 144 )
rotation = 4.71239

[node name="WallDown" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 224, 224 )
rotation = 3.14159

[node name="WallRight" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 384, 80 )
rotation = 1.5708

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
